SRC/nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: config-test
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  loadBalancerIP: 192.168.100.254
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
